# webinar-open-coroutines

./: .clang-format  1_sync.cpp  2-1_multi-thread.cpp  2-2_multi-thread-async.cpp  2-3_sync-async.cpp  3-1_co-I-want-to.cpp  3-2_co-simple.cpp  3-3_co-simple-sequence.cpp  3-4_co-download-sync.cpp  3-5_co-download-async.cpp  4-1_boost-multi-thread-server.cpp  4-2_boost-co-server.cpp  5-1_co-generator.cpp  5-2_co-generator-sequence.cpp  CMakeLists.txt  README.md
lib/: client.cpp  client.hpp  download.cpp  download.hpp  download_async.cpp  download_async.hpp  download_result.hpp  main.cpp  settings.hpp  stat.hpp
script/: client.py  install.sh
